[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="HUD" parent="." index="0" instance=ExtResource( 2 )]

[node name="ScoreTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="MessageTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Player" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 511.863, 305.457 )

[node name="LeftWall" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 1100.9, 291.603 )

[node name="RightWall" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( -115.019, 282.709 )

[connection signal="start_game" from="HUD" to="." method="new_game"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]


